--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "immer": "^9.0.12",
+    "modal-gl-react-component": "^1.0.0",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.7",
+    "react-data-table-component-extensions": "^1.5.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -15,6 +18,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
