--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
+    "@mui/styles": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "immer": "^9.0.12",
     "modal-gl-react-component": "^1.0.0",
     "react": "^17.0.2",
-    "react-data-table-component": "^7.4.7",
-    "react-data-table-component-extensions": "^1.5.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -19,6 +22,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
