--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
     "immer": "^9.0.12",
+    "lighthouse": "^9.5.0",
     "modal-gl-component": "^0.1.0",
     "modal-gl-react-component": "^1.0.0",
     "react": "^17.0.2",
